Getting ready to deploy JSpeak with Gradle plugins